HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportOutsideLibrary/Expected.uv
//! Expected diagnostic metadata for the HostExportOutsideLibrary rejected-source specimen.

expectedDiagnostic("E-SYS-3357", "rule.23.HostExport-Library-Err")
